--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@trendyol-js/react-carousel": "^2.0.0",
     "axios": "^0.24.0",
     "json-server": "^0.17.0",
     "node": "^14.18.1",
